fixed: allow ImageFieldType items to wrap

--- a/core/src/ImageFieldType/ImageFieldType.less
+++ b/core/src/ImageFieldType/ImageFieldType.less
@@ -26,6 +26,7 @@
   }
   .ImageFieldTypeContent {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
